--- a/src/sample/studentLoginUpdated.fxml
+++ b/src/sample/studentLoginUpdated.fxml
@@ -39,7 +39,7 @@
                 <Label alignment="CENTER" prefHeight="25.0" prefWidth="250.0" text="BRANCH" textOverrun="CLIP" GridPane.rowIndex="5" />
                 <Label alignment="CENTER" prefHeight="25.0" prefWidth="250.0" text="SET PASSWORD" textOverrun="CLIP" GridPane.rowIndex="6" />
                 <Label alignment="CENTER" prefHeight="25.0" prefWidth="250.0" text="CHANGE PASSWORD" textOverrun="CLIP" GridPane.rowIndex="7" />
-                <TextField fx:id="enrollmentNumber" alignment="CENTER" disable="true" prefHeight="27.0" prefWidth="201.0" GridPane.columnIndex="1">
+                <TextField fx:id="enrollmentNumber" alignment="BASELINE_CENTER" disable="true" prefHeight="27.0" prefWidth="201.0" GridPane.columnIndex="1">
                     <padding>
                         <Insets bottom="10.0" left="10.0" right="10.0" />
                     </padding>
