--- a/src/sample/studentLoginUpdated.fxml
+++ b/src/sample/studentLoginUpdated.fxml
@@ -14,7 +14,7 @@
                 <Font name="System Bold" size="38.0" />
             </font>
         </Label>
-        <GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="286.0" prefWidth="600.0">
+        <GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="325.0" prefWidth="600.0">
             <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" maxWidth="323.0" minWidth="10.0" prefWidth="214.0" />
                 <ColumnConstraints hgrow="SOMETIMES" maxWidth="401.0" minWidth="-Infinity" prefWidth="332.0" />
@@ -25,6 +25,7 @@
                 <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" prefHeight="35.0" />
                 <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" prefHeight="35.0" />
                 <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" prefHeight="35.0" />
+            <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" prefHeight="35.0" />
                 <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" prefHeight="35.0" />
                 <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" prefHeight="35.0" />
                 <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" prefHeight="35.0" />
@@ -35,11 +36,11 @@
                 <Label alignment="CENTER" prefHeight="25.0" prefWidth="272.0" text="NAME" textOverrun="CLIP" GridPane.rowIndex="1" />
                 <Label alignment="CENTER" prefHeight="25.0" prefWidth="250.0" text="DATE OF BIRTH" textOverrun="CLIP" GridPane.rowIndex="2" />
                 <Label alignment="CENTER" prefHeight="25.0" prefWidth="250.0" text="CONTACT NUMBER" textOverrun="CLIP" GridPane.rowIndex="3" />
-                <Label alignment="CENTER" prefHeight="25.0" prefWidth="250.0" text="GENDER" textOverrun="CLIP" GridPane.rowIndex="4" />
-                <Label alignment="CENTER" prefHeight="25.0" prefWidth="250.0" text="BRANCH" textOverrun="CLIP" GridPane.rowIndex="5" />
-                <Label alignment="CENTER" prefHeight="25.0" prefWidth="250.0" text="SET PASSWORD" textOverrun="CLIP" GridPane.rowIndex="6" />
-                <Label alignment="CENTER" prefHeight="25.0" prefWidth="250.0" text="CHANGE PASSWORD" textOverrun="CLIP" GridPane.rowIndex="7" />
-                <TextField fx:id="enrollmentNumber" alignment="BASELINE_CENTER" disable="true" prefHeight="27.0" prefWidth="201.0" GridPane.columnIndex="1">
+                <Label alignment="CENTER" prefHeight="25.0" prefWidth="250.0" text="GENDER" textOverrun="CLIP" GridPane.rowIndex="5" />
+                <Label alignment="CENTER" prefHeight="25.0" prefWidth="250.0" text="BRANCH" textOverrun="CLIP" GridPane.rowIndex="6" />
+                <Label alignment="CENTER" prefHeight="25.0" prefWidth="250.0" text="SET PASSWORD" textOverrun="CLIP" GridPane.rowIndex="7" />
+                <Label alignment="CENTER" prefHeight="25.0" prefWidth="250.0" text="CHANGE PASSWORD" textOverrun="CLIP" GridPane.rowIndex="8" />
+                <TextField fx:id="enrollmentNumber" disable="true" prefHeight="0.0" prefWidth="332.0" GridPane.columnIndex="1" GridPane.halignment="LEFT" GridPane.valignment="CENTER">
                     <padding>
                         <Insets bottom="10.0" left="10.0" right="10.0" />
                     </padding>
@@ -47,7 +48,7 @@
                 <TextField fx:id="studentName" prefHeight="25.0" prefWidth="33.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
                 <TextField fx:id="studentContactNumber" prefHeight="25.0" prefWidth="246.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
                 <DatePicker fx:id="studentDob" prefHeight="25.0" prefWidth="332.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                <GridPane alignment="CENTER" prefHeight="36.0" prefWidth="325.0" GridPane.columnIndex="1" GridPane.rowIndex="4">
+                <GridPane alignment="CENTER" prefHeight="36.0" prefWidth="325.0" GridPane.columnIndex="1" GridPane.rowIndex="5">
                     <columnConstraints>
                         <ColumnConstraints hgrow="SOMETIMES" maxWidth="90.0" minWidth="10.0" prefWidth="35.0" />
                         <ColumnConstraints hgrow="SOMETIMES" maxWidth="143.0" minWidth="10.0" prefWidth="143.0" />
@@ -59,15 +60,16 @@
                     </rowConstraints>
                     <children>
                         <RadioButton fx:id="studentMale" mnemonicParsing="false" prefHeight="17.0" prefWidth="98.0" text="MALE" GridPane.columnIndex="1">
-                     <toggleGroup>
-                        <ToggleGroup fx:id="gender" />
-                     </toggleGroup></RadioButton>
+                            <toggleGroup>
+                                <ToggleGroup fx:id="gender" />
+                            </toggleGroup>
+                        </RadioButton>
                         <RadioButton fx:id="studentFemale" mnemonicParsing="false" text="FEMALE" toggleGroup="$gender" GridPane.columnIndex="3" />
                     </children>
                 </GridPane>
-                <PasswordField fx:id="studentPassword" prefHeight="25.0" prefWidth="246.0" GridPane.columnIndex="1" GridPane.rowIndex="6" />
-                <PasswordField fx:id="studentConfirmPassword" prefHeight="25.0" prefWidth="246.0" GridPane.columnIndex="1" GridPane.rowIndex="7" />
-                <ChoiceBox fx:id="branchChoiceBox" onKeyPressed="#onBranchChoiceBoxClick" prefHeight="25.0" prefWidth="338.0" GridPane.columnIndex="1" GridPane.rowIndex="5">
+                <PasswordField fx:id="studentPassword" prefHeight="25.0" prefWidth="246.0" GridPane.columnIndex="1" GridPane.rowIndex="7" />
+                <PasswordField fx:id="studentConfirmPassword" prefHeight="25.0" prefWidth="246.0" GridPane.columnIndex="1" GridPane.rowIndex="8" />
+                <ChoiceBox fx:id="branchChoiceBox" onKeyPressed="#onBranchChoiceBoxClick" prefHeight="25.0" prefWidth="338.0" GridPane.columnIndex="1" GridPane.rowIndex="6">
                     <items>
                         <FXCollections fx:factory="observableArrayList">
                             <String fx:value="Computer Science and Engineering" />
@@ -82,6 +84,8 @@
                         <Blend />
                     </effect>
                 </ChoiceBox>
+            <Label alignment="CENTER" prefHeight="25.0" prefWidth="250.0" text="EMAIL" textOverrun="CLIP" GridPane.rowIndex="4" />
+            <TextField fx:id="studentEmailID" prefHeight="25.0" prefWidth="246.0" GridPane.columnIndex="1" GridPane.rowIndex="4" />
             </children>
         </GridPane>
         <GridPane prefHeight="71.0" prefWidth="600.0">
@@ -98,8 +102,8 @@
                 <RowConstraints maxHeight="31.0" minHeight="10.0" prefHeight="22.0" vgrow="SOMETIMES" />
             </rowConstraints>
             <children>
-                <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="159.0" text="SUBMIT" GridPane.columnIndex="3" GridPane.rowIndex="1" />
-                <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="159.0" text="CANCEL" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                <Button fx:id="submitButtonClick" mnemonicParsing="false" onMouseClicked="#submitButtonClick" prefHeight="25.0" prefWidth="159.0" text="SUBMIT" GridPane.columnIndex="3" GridPane.rowIndex="1" />
+                <Button fx:id="cancelButtonClick" mnemonicParsing="false" onMouseClicked="#cancelButtonClick" prefHeight="25.0" prefWidth="159.0" text="CANCEL" GridPane.columnIndex="1" GridPane.rowIndex="1" />
             </children>
         </GridPane>
     </children>
